fix:sem overflow

--- a/css/index.css
+++ b/css/index.css
@@ -9,7 +9,6 @@
 
 body {
     height: 100vh;
-    overflow: hidden;
     margin: 0%;
     padding: 0%;
     display: flex;
